docs: Finalize README and update project documentation

--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -264,15 +264,20 @@
     "    frontmatter = f\"\"\"---\n",
     "date: {date_iso}\n",
     "title: \"{title}\"\n",
+    "summary: \"{summary}\"\n",
+    "series: sqlpage.workout-logger\n",
+    "github: https://github.com/drusho/SQLPage-Workout-Logger\n",
+    "source: \"{db_path}\"\n",
+    "categories: Homelab\n",
     "tags:\n",
     "  - sqlpage\n",
-    "series: sqlpage.workout-logger\n",
-    "categories: Homelab\n",
+    "  - workout\n",
+    "  - database\n",
+    "  - schema\n",
+    "  - documentation\n",
     "cssclasses:\n",
     "  - academia\n",
     "  - academia-rounded\n",
-    "source: \"{db_path}\"\n",
-    "summary: \"{summary}\"\n",
     "---\n",
     "\"\"\"\n",
     "    callout = f\"\"\">[!tip]+ Tip\n",
@@ -342,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -376,15 +381,18 @@
     "    frontmatter = f\"\"\"---\n",
     "date: {date_iso}\n",
     "title: \"{title}\"\n",
+    "summary: \"{summary}\"\n",
+    "series: sqlpage.workout-logger\n",
+    "github: https://github.com/drusho/SQLPage-Workout-Logger\n",
+    "source: \"{source_folder_for_tree}\"\n",
+    "categories: Homelab\n",
     "tags:\n",
     "  - sqlpage\n",
-    "series: sqlpage.workout-logger\n",
-    "categories: Homelab\n",
+    "  - workout\n",
     "cssclasses:\n",
     "  - academia\n",
     "  - academia-rounded\n",
-    "source: \"{source_folder_for_tree}\"\n",
-    "summary: \"{summary}\"\n",
+    "\n",
     "---\n",
     "\"\"\"\n",
     "    callout = f\"\"\">[!tip]+ Tip\n",
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -579,17 +587,18 @@
     "    frontmatter = f\"\"\"---\n",
     "date: {date_iso}\n",
     "title: \"{title}\"\n",
+    "summary: \"{summary}\"\n",
+    "series: sqlpage.workout-logger\n",
+    "github: https://github.com/drusho/SQLPage-Workout-Logger\n",
+    "source: \"{source_folder_for_tree}\"\n",
+    "categories: Homelab\n",
     "tags:\n",
     "  - sqlpage\n",
     "  - documentation\n",
     "  - style-guide\n",
-    "series: sqlpage.workout-logger\n",
-    "categories: Homelab\n",
     "cssclasses:\n",
     "  - academia\n",
-    "  - academia-rounded\n",
-    "source: \"{source_folder_for_tree}\"\n",
-    "summary: \"{summary}\"\n",
+    "  - academia-rounded  \n",
     "---\n",
     "\"\"\"\n",
     "    callout = f\"\"\">[!tip]+ Tip\n",
