migration and backup of sytems upgraded

--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -126,8 +126,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 10 tables: ExerciseLibrary, ProgressionModelSteps, ProgressionModels, TemplateExerciseList, UserExerciseProgression, WorkoutLog, WorkoutSetLog, WorkoutTemplates, sessions, users\n",
-      "✅ Found 3 views: FullWorkoutHistory, UserExerciseProgressionTargets, WorkoutTemplateDetails\n"
+      "✅ Found 10 tables: ExerciseLibrary, ProgressionModelSteps, ProgressionModels, UserExerciseProgression, WorkoutSetLog, sessions, users, TemplateExerciseList, WorkoutLog, WorkoutTemplates\n",
+      "✅ Found 2 views: FullWorkoutHistory, UserExerciseProgressionTargets\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "e48b1acd",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠️  Skipping object 'FullWorkoutHistory' due to a processing error: no such table: main.WorkoutSetLog_temp\n",
       "✅ Report body generated for all tables and views.\n"
      ]
     }
@@ -503,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -530,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
@@ -556,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -633,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -682,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -760,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -768,7 +767,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found and parsed documentation comments from 23 SQL files.\n"
+      "✅ Found and parsed documentation comments from 25 SQL files.\n"
      ]
     }
    ],
@@ -827,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -901,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
