--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
      "output_type": "stream",
      "text": [
       "✅ Found 10 tables: ExerciseLibrary, ProgressionModelSteps, ProgressionModels, UserExerciseProgression, WorkoutSetLog, sessions, users, TemplateExerciseList, WorkoutLog, WorkoutTemplates\n",
-      "✅ Found 2 views: FullWorkoutHistory, UserExerciseProgressionTargets\n"
+      "✅ Found 3 views: FullWorkoutHistory, UserExerciseProgressionTargets, WorkoutTemplateDetails\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "id": "e48b1acd",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 92,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -564,11 +564,10 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-18/2025-06-18 - SQLPage - Workout - Database Schema Report.md'\n",
-      "\n",
-      "Saving copy to Obsidian folder...\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Database Schema Report.md'\n",
+      "\\nSaving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-18/2025-06-18 - SQLPage - Workout - Database Schema Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Database Schema Report.md'\n"
      ]
     }
    ],
@@ -607,16 +606,24 @@
     "    callout = f\"\"\">[!tip]+ Tip\n",
     "> - This report was auto-generated using the `SQLPage_Workout_Documentation_Generator.ipynb` notebook.\n",
     "\"\"\"\n",
-    "    full_content = frontmatter + callout + schema_report_body\n",
+    "    obsidian_content = frontmatter + callout + schema_report_body\n",
     "\n",
+    "    # --- Version 2: Content for GitHub/Primary Export (New format) ---\n",
+    "    github_h1_title = f\"{date_iso} - {report_type}\"\n",
+    "    github_header = f\"# {github_h1_title}\\\\n\\\\n\"\n",
+    "    github_summary = f'**summary:**\\\\n\"{summary}\"\\\\n\\\\n'\n",
+    "    github_content = github_header + github_summary + callout + \"\\\\n\\\\n---\\\\n\" + schema_report_body\n",
+    "\n",
+    "    # --- SAVING LOGIC ---\n",
+    "    # Save the GitHub version to the primary export folder\n",
     "    dated_export_folder = os.path.join(export_folder, date_iso)\n",
-    "    save_report(dated_export_folder, filename, full_content)\n",
+    "    save_report(dated_export_folder, filename, github_content)\n",
     "    \n",
+    "    # If an Obsidian folder is specified, save the original version there\n",
     "    if obsidian_folder:\n",
-    "        print(\"\\nSaving copy to Obsidian folder...\")\n",
-    "        # NEW: Create the structured path for Obsidian\n",
+    "        print(\"\\\\nSaving copy to Obsidian folder...\")\n",
     "        obsidian_reports_path = os.path.join(obsidian_folder, obsidian_project_subfolder, \"reports\", date_iso)\n",
-    "        save_report(obsidian_reports_path, filename, full_content)\n",
+    "        save_report(obsidian_reports_path, filename, obsidian_content)\n",
     "else:\n",
     "    print(\"Skipping save for schema report because no content was generated.\")"
    ]
@@ -632,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 93,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -681,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 94,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -690,11 +697,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-18/2025-06-18 - SQLPage - Workout - Folder Tree Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Folder Tree Report.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-18/2025-06-18 - SQLPage - Workout - Folder Tree Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Folder Tree Report.md'\n"
      ]
     }
    ],
@@ -759,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -767,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found and parsed documentation comments from 25 SQL files.\n"
+      "✅ Found and parsed documentation comments from 27 SQL files.\n"
      ]
     }
    ],
@@ -826,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -900,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 97,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -909,11 +916,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-18/2025-06-18 - SQLPage - Workout - SQL Comment Documentation.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-19/2025-06-19 - SQLPage - Workout - SQL Comment Documentation.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-18/2025-06-18 - SQLPage - Workout - SQL Comment Documentation.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-19/2025-06-19 - SQLPage - Workout - SQL Comment Documentation.md'\n"
      ]
     }
    ],
