updates to history

--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -126,8 +126,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 10 tables: ExerciseLibrary, ProgressionModelSteps, ProgressionModels, UserExerciseProgression, WorkoutSetLog, sessions, users, TemplateExerciseList, WorkoutLog, WorkoutTemplates\n",
-      "✅ Found 3 views: FullWorkoutHistory, UserExerciseProgressionTargets, WorkoutTemplateDetails\n"
+      "✅ Found 12 tables: ExerciseLibrary, ProgressionModelSteps, ProgressionModels, UserExerciseProgression, WorkoutSetLog, sessions, users, TemplateExerciseList, WorkoutLog, WorkoutTemplates, _migrations, UserExerciseProgressionHistory\n",
+      "✅ Found 5 views: FullWorkoutHistory, UserExerciseProgressionTargets, WorkoutTemplateDetails, V_ProgressionHistorySummary, V_Exercise1RM_Chart\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "id": "e48b1acd",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 11,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -564,10 +564,10 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Database Schema Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Database Schema Report.md'\n",
       "\\nSaving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Database Schema Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Database Schema Report.md'\n"
      ]
     }
    ],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 13,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -697,11 +697,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Folder Tree Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Folder Tree Report.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-19/2025-06-19 - SQLPage - Workout - Folder Tree Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Folder Tree Report.md'\n"
      ]
     }
    ],
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found and parsed documentation comments from 27 SQL files.\n"
+      "✅ Found and parsed documentation comments from 29 SQL files.\n"
      ]
     }
    ],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 16,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -916,11 +916,11 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-19/2025-06-19 - SQLPage - Workout - SQL Comment Documentation.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-30/2025-06-30 - SQLPage - Workout - SQL Comment Documentation.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-19/2025-06-19 - SQLPage - Workout - SQL Comment Documentation.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-30/2025-06-30 - SQLPage - Workout - SQL Comment Documentation.md'\n"
      ]
     }
    ],
