--- a/migrations/migrations_runner_notebook.ipynb
+++ b/migrations/migrations_runner_notebook.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7184c1b8",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "27b44b62",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e2a06181",
    "metadata": {},
    "outputs": [],
@@ -223,10 +223,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "39c3f6f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting migration process...\n",
+      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-06-30_195301.db...\n",
+      "Backup successful.\n",
+      "\n",
+      "Applying migration: 003_add_timezone_to_users.sql...\n",
+      "Successfully applied 003_add_timezone_to_users.sql.\n",
+      "\n",
+      "Migration process finished.\n"
+     ]
+    }
+   ],
    "source": [
     "# cell 4: Run the Migration Process\n",
     "run_migrations()"
@@ -240,7 +255,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
